2018-08-06  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to composer.json

2017-05-17  Franz Holzinger  <franz@ttproducts.de>
    * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * modify extension version
    * add a composer.json file

2017-03-11  Franz Holzinger  <franz@ttproducts.de>
    * ready for TYPO3 8.x

2015-10-20  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.3.1 and TYPO3 6.2 and 7.99
	* add documentation

2015-08-06  Franz Holzinger  <franz@ttproducts.de>
	* update for static_info_tables 6.2.1 and TYPO3 6.2 and 7.0

2011-05-18  Franz Holzinger  <franz@ttproducts.de>
	* replace 'Storbritannien' by 'Det Forenede Kongerige'
	* replace 'Holland' by 'Nederlandene'

2006-12-19  Franz Holzinger  <kontakt@fholzinger.com>
	* enable the function to load additional TCA to allow fields added from the language specific static_info_tables derivates
	* Added a ChangeLog file